k8s/check-notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: check-notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: check-notification-service
  template:
    metadata:
      labels:
        app: check-notification-service
    spec:
      containers:
      - name: check-notification-service
        image: huynhngochuyhoang/check-notification-service
        ports:
        - containerPort: 8080
