k8s/check-notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: check-notification-service
spec:
  type: NodePort
  selector:
    app: check-notification-service
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30333
