k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: notification
spec:
  selector:
    app: client
  ports:
  - port: 4200
    targetPort: 4200
