k8s/check-notification-istio-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: check-notification-destination-rule
spec:
  host: check-notification-service
