k8s/check-notification-istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: check-notification-virtual-service
  namespace: notification
spec:
  hosts:
  - "*"
  gateways:
  - check-notification-gateway
  http:
    - route:
      - destination:
          port:
            number: 8080
          host: check-notification-service
      corsPolicy:
        allowOrigins:
        - exact: http://localhost
        allowMethods:
          - GET
