k8s/notification-istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notification-virtual-service
spec:
  hosts:
  - notification-service
  http:
    - route:
      - destination:
          host: notification-service
          subset: v1
        weight: 40
      - destination:
          host: notification-service
          subset: v2
        weight: 60
